tests/grammar/types/args/schema_types_err_too_many_args_2/stderr.golden
error[E2L23]: CompileError
 --> ${CWD}/main.k:4:44
  |
4 | schema_in_main_k = SchemaInMainK('param1', "param2")
  |                                            ^ "SchemaInMainK" takes 1 positional argument but 2 were given
  |